Thu May 15 11:48:10 1997  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* variables.cc (bind_ans): Only bind ans and print result if value
	is defined.

	* defun.cc: New file.  Move functions for installing objects in
	the symbol table here from variables.cc.

	* oct-obj.h, oct-obj.cc: Add custom allocator, fwiw.

	* toplev.cc (main_loop): Correctly increment command number.

	* TEMPLATE-INST/SLList-tm.cc: Don't instantiate lists of pointers
	to tree_matrix_row objects.
	* TEMPLATE-INST/SLList-misc.cc: Do instantiate lists of pointers
	to tree_argument_list objects.

	* DLD-FUNCTIONS/dassl.cc: Update to use new octave_function
	interface to user-supplied functions.
	* DLD-FUNCTIONS/fsolve.cc: Likewise.
	* DLD-FUNCTIONS/lsode.cc: Likewise.
	* DLD-FUNCTIONS/npsol.cc: Likewise.
	* DLD-FUNCTIONS/quad.cc: Likewise.

	* dynamic-ld.h, dynamic-ld.cc (builtin_fcn_installer typedef):
	Rename from builtin_fcn.
	(octave_dynamic_loader::load_fcn_from_dot_oct_file):
	Simplify by using new installer function defined by DEFUN_DLD.

	* defun-dld.h (DEFUN_DLD): Use DEFINE_FUN_INSTALLER_FUN instead of
	DEFINE_FUN_STRUCT_FUN.
	* defun.h (DEFUN_MAPPER): Use DEFUN_MAPPER_INTERNAL.
	* defun-int.h (DEFVAR_INTERNAL): Rename from DEFVAR_INT and move
	here from defun.h.  Change all uses.
	(DEFUN_MAPPER_INTERNAL): New macro.
	(DEFINE_FUN_INSTALLER_FUN): New macro to define function that the
	dynamic loader calls to do all the work of installing a new function.
	(DEFINE_FUN_STRUCT_FUN): Delete.

	* parse.y: Rewrite to handle more general expressions.
	* lex.l: Corresponding changes.

	* pt-walk.h, pt-pr-code.h, pt-pr-code.cc: Cope with new parse tree
	object structure.

	* pt-misc.cc (class tree_for_command): Split into
	tree_simple_for_command and tree_complex_for_command classes.

	* pt-misc.h, pt-misc.cc (tree_statement::eval): Handle identifier
	lookup and printing and binding ans here.
	(tree_statement_list::eval): Simplify.
	(tree_argument_list::all_elements_are_constant): New function.